--- a/blocks/main-info/main-info.css
+++ b/blocks/main-info/main-info.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  width: 75%;
+  width: 1111px;
   height: auto;
-  padding: 0 167px 0 164px;
+  padding: 0 164px 0 164px;
 }
