--- a/blocks/main-info/__left/main-info__left.css
+++ b/blocks/main-info/__left/main-info__left.css
@@ -1,10 +1,10 @@
 .main-info__left{
   margin: 0;
+  padding: 0 8px 0 0;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 24%;
-  height: 356px;
-  border: 1px solid red;
+  width: 350px;
+  height: auto;
 }
