--- a/blocks/trakcer/tracker.css
+++ b/blocks/trakcer/tracker.css
@@ -1,3 +1,11 @@
 .tracker{
-  
+  margin: 0 0 60px 0;
+  width: 350px;
+  height: 166px;
+  background-color: #429578;
+  border-radius: 8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
