--- a/pages/index.css
+++ b/pages/index.css
@@ -11,15 +11,41 @@
 @import url(../blocks/header/__user/header__user.css);
 
 @import url(../blocks/content/content.css);
+@import url(../blocks/top-panel/top-panel.css);
 @import url(../blocks/cities-panel/cities-panel.css);
 @import url(../blocks/cities-panel/__city/cities-panel__city.css);
+@import url(../blocks/cities-panel/__city/_active/cities-panel__city_active.css);
+@import url(../blocks/cities-panel/__link/cities-panel__link.css);
+@import url(../blocks/add-city/add-city.css);
+@import url(../blocks/add-city/__text/add-city__text.css);
+@import url(../blocks/add-city/__icon/add-city__icon.css);
+
 @import url(../blocks/main-info/main-info.css);
+
 @import url(../blocks/main-info/__left/main-info__left.css);
+
 @import url(../blocks/trakcer/tracker.css);
+@import url(../blocks/trakcer/__risk/tracker__risk.css);
+
 @import url(../blocks/report/report.css);
+@import url(../blocks/report/__title/report__title.css);
+@import url(../blocks/report/__box/report__box.css);
+@import url(../blocks/report/__text/report__text.css);
+@import url(../blocks/report/__numbers/report__numbers.css);
+
 @import url(../blocks/main-info/__right/main-info__right.css);
 @import url(../blocks/map/map.css);
+
 @import url(../blocks/more-info/more-info.css);
+@import url(../blocks/vaccinated/vaccinated.css);
+@import url(../blocks/vaccinated/__title/vaccinated__title.css);
+@import url(../blocks/vaccinated/__container/vaccinated__container.css);
+@import url(../blocks/vaccinated/__graph/vaccinated__graph.css);
+@import url(../blocks/vaccinated/__box/vaccinated__box.css);
+@import url(../blocks/vaccinated/__color/vaccinated__color.css);
+@import url(../blocks/vaccinated/__text/vaccinated__text.css);
+
+@import url(../blocks/more-news/more-news.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__container/footer__container.css);
