feat: Add map layer to page, fix: 'fix font files'

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,10 @@
-.page{
+.page {
   margin: 0;
-  font-family: 'WorkSans';
+  font-family: "Work Sans", Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
