Tracker and News sections are done!

--- a/blocks/trakcer/__title/tracker__title.css
+++ b/blocks/trakcer/__title/tracker__title.css
@@ -1,6 +1,6 @@
-.tracker__risk{
+.tracker__title{
   margin: 0;
-  padding: 12px 0 0 20px;
+  padding: 12px 0 12px 20px;
   font-weight: 500;
   font-size: 20px;
   line-height: 23px;
