--- a/blocks/cities-panel/cities-panel.css
+++ b/blocks/cities-panel/cities-panel.css
@@ -2,7 +2,7 @@
   margin: 0;
   width: 440px;
   height: 49px;
-  padding: 60px 0 60px 166px;
+  padding: 60px 0 60px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
