--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,4 +7,8 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
