--- a/blocks/last-news/__read-more/last-news__read-more.css
+++ b/blocks/last-news/__read-more/last-news__read-more.css
@@ -1,8 +1,7 @@
-.last-news__publication{
+.last-news__read-more{
   margin: 0;
-  width: 69px;
-  height: 20px;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
+  color: #000;
 }
