--- a/blocks/last-news/__source-title/last-news__source-title.css
+++ b/blocks/last-news/__source-title/last-news__source-title.css
@@ -1,11 +1,12 @@
 .last-news__source-title{
   margin: 0;
-  width: 226px;
-  height: 21px;
+  width: 41px;
+  height: 14px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   padding-top: 3px;
   color: #000;
+  text-decoration: none;
 }
