--- a/blocks/add-city/add-city.css
+++ b/blocks/add-city/add-city.css
@@ -1,17 +1,14 @@
 .add-city{
   margin: 60px 0 70px 0;
-  width: 166px;
-  height: 36px;
-  background: #F1E8DC;
+  width: 110px;
+  height: 39px;
+  background: #F9BF8F;
   border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   transition: background 250ms ease-in-out, transform 150ms ease;
-}
-
-.add-city:hover{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
