--- a/blocks/cities-panel/__city/_active/cities-panel__city_active.css
+++ b/blocks/cities-panel/__city/_active/cities-panel__city_active.css
@@ -5,8 +5,5 @@
   font-size: 28px;
   line-height: 33px;
   width: 106px;
-  height: 33px;
-  background: #F1E8DC;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 0;
 }
