--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,11 +1,13 @@
 .header__link{
   margin: 0;
+  width: 136px;
+  height: 20px;
   font-size: 20px;
   line-height: 20px;
   font-weight: 400;
   font-style: normal;
   text-decoration: none;
   color: inherit;
-  padding-right: 50px;
+  padding: 0 28px 0 0;
   letter-spacing: 0.02em;
 }
