--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,13 +1,6 @@
 .header__link{
   margin: 0;
-  width: 136px;
+  width: auto;
   height: 20px;
-  font-size: 20px;
-  line-height: 20px;
-  font-weight: 400;
-  font-style: normal;
-  text-decoration: none;
-  color: inherit;
-  padding: 0 28px 0 0;
-  letter-spacing: 0.02em;
+  padding: 0 30px 0 0;
 }
