--- a/blocks/add-city/add-city.css
+++ b/blocks/add-city/add-city.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   transition: background 250ms ease-in-out, transform 150ms ease;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
 }
 
 .add-city:active{
