--- a/blocks/report/__box/report__box.css
+++ b/blocks/report/__box/report__box.css
@@ -8,8 +8,14 @@
   flex-direction: column;
   align-items: center;
   transition: 0.3s;
+  cursor: pointer;
+  transition: background 250ms ease-in-out, transform 150ms ease;
 }
 
 .report__box:hover{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.report__box:active{
+  transform: scale(0.98);
 }
