--- a/blocks/hotline/hotline.css
+++ b/blocks/hotline/hotline.css
@@ -1,11 +1,7 @@
 .hotline{
-  margin: 48px 165px 0 0;
+  margin: 48px 0 0 925px;
   width: 350px;
-  height: auto;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  align-self: end;
-  background: #E8D4D0;
-  border-radius: 12px;
+  align-items: flex-end;
 }
