--- a/pages/certification.css
+++ b/pages/certification.css
@@ -14,6 +14,7 @@
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/hotline/hotline.css);
+@import url(../blocks/hotline/__container/hotline__container.css);
 @import url(../blocks/hotline/__title/hotline__title.css);
 @import url(../blocks/hotline/__workhours/hotline__workhours.css);
 @import url(../blocks/hotline/__box/hotline__box.css);
