--- a/blocks/cities-panel/cities-panel.css
+++ b/blocks/cities-panel/cities-panel.css
@@ -1,11 +1,9 @@
-.cities-panel{
+.cities-panel {
   margin: 0;
-  width: 440px;
-  height: 49px;
-  padding: 60px 0 60px 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
   list-style: none;
-  text-align: center;
 }
